Fix z-index

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,6 +12,7 @@ header {
   width: 100%;
   border: 1px solid #dddddd;
   background-color: white;
+  z-index: 1;
 }
 
 #logo {
